114) kernel: net: ipv6: add RT6_LOOKUP_F_IFACE flag if oif is set.<br>
115) kernel: net: ipv6: dont add RT6_LOOKUP_F_IFACE flag if saddr set.<br>
116) kernel: net: ipv6: add labels for site-local and 6bone testing addresses (RFC6724).<br>
117) kernel: net: ipv6: add anti-spoofing checks for 6to4 and 6rd.<br>
118) kernel: net: ipv6: only apply anti-spoofing checks to not-pointopoint tunnels.<br>
119) kernel: net: ipv6: nat: do not drop DNATed 6to4/6rd packets.<br>
120) kernel: net: ipv6: remove redundant oif checks in rt6_device_match.<br>
121) kernel: net: ipv6: drop frames with attached skb->sk in forwarding.<br>
122) kernel: net: ipv6: protect mtu calculation of wrap-around and infinite loop by rounding issues.<br>
123) kernel: net: ipv6: recreate ipv6 link-local addresses when increasing MTU over IPV6_MIN_MTU.<br>
124) kernel: net: ipv6: fix a potential use after free in sit.c.<br>
125) kernel: net: ipv6: select fragment id during UFO segmentation if not set.<br>
126) kernel: net: ipv6: fix fragment id assignment on LE arches.<br>
127) kernel: net: ipv6: call ipv6_proxy_select_ident instead of ipv6_select_ident in udp6_ufo_fragment.<br>
128) kernel: net: ipv6: RTAX_FEATURE_ALLFRAG causes inefficient TCP segment sizing.<br>
129) kernel: net: ipv6: fix IPv6 UDP fragmentation issue.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~99%).<br>
2) need add subchannel select for 5GHz module.<br>
3) need review, experiments with new roaming code in MT76x2 driver, need add multiif support in iappd daemon and implement to WebUI.<br>
4) in very far future: need add in firewall support xt_time matches for parental control.<br>
5) in very far future: need add perip shaper script and webui .<br>
6) in very far future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
7) in very far future: port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
<br>
<br>
<br>